Fix home page overlapping by removing min width on quillcontainer

--- a/app/assets/stylesheets/api/home/homeTotalLayout.css
+++ b/app/assets/stylesheets/api/home/homeTotalLayout.css
@@ -18,21 +18,14 @@
 }
 
 .outerhomeRightSide {
-  display: flex;
-  /*position: relative;*/
-  /*width: calc(100% - 425px);*/
-  min-width: 360px;
   width: 100%;
-  border: 2px solid red;
 }
 
 .innerhomeRightSide {
-  /*position: absolute;*/
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid green;
 }
 
 .innerhomeRightSide .noteFormTopBarContainer {
@@ -41,49 +34,47 @@
   height: 50px;
 }
 
-.innerhomeRightSide .noteFormTopBarContainer > * {
+.innerhomeRightSide .noteFormTopBarContainer > * > * {
   position: absolute;
+  top: 0;
+  left: 0;
 }
 
+/*CSS styling for the updateNote window on homepage below*/
+
 .quillContainer {
-  /*position: relative;*/
-  /*position: absolute;*/
   display: flex;
   flex-direction: column;
   max-width: 960px;
   min-width: 300px;
   height: 100%;
-
-  border: 2px solid red;
+  margin-left: 50px;
 }
 
-#root > div > div > div.outerhomeRightSide > div > div.quillContainer > div.quill > div.ql-container.ql-snow > div.ql-editor {
+.quillContainer .ql-editor {
   margin-top: 60px;
-  border: 1px solid blue;
   height: 70vh;
+  padding-left: 3px;
 }
 
-#root > div > div > div.outerhomeRightSide > div > div.quillContainer > div.quill > div.ql-toolbar.ql-snow {
+.quillContainer .ql-toolbar.ql-snow {
   min-width: 570px;
   border-top: none;
   border-left: none;
   border-right: none;
-
-  /*margin-top: -10px;*/
-  /*border: 3px solid orange;*/
 }
 
-#root > div > div > div.outerhomeRightSide > div > div.quillContainer > input[type="text"] {
+.quillContainer #updateNoteTitle {
   width: 100%;
   outline: none;
   border: none;
   color: #2DBE60;
   font-size: 30px;
   font-weight: 200;
-  padding: 0px 15px 0px 0px;
+  padding: 0px 0px 0px 0px;
   overflow: hidden;
   position: absolute;
-  top: 152px;
+  top: 160px;
 }
 
 .quillContainer .ql-container.ql-snow {
