--- a/app/assets/stylesheets/api/notes/note_index.css
+++ b/app/assets/stylesheets/api/notes/note_index.css
@@ -2,8 +2,6 @@
   /*position: relative;*/
   /*border: 1px solid red;*/
   height: 100vh;
-  width: 330px;
-  min-width: 330px;
   display: flex;
   flex-direction: column;
   border-right: 1px solid rgb(212, 210, 210);
